<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stLedStatus" Id="{95fa0e45-51e3-4819-8a68-9791198d1cf3}">
    <Declaration><![CDATA[TYPE stLedStatus :
STRUCT
	b_busy		:	BOOL;
	b_Transmit	:	BOOL;
	b_SendAck	:	BOOL;
	b_UpdateAck	:	BOOL;
	b_CMDReject	:	BOOL;
	b_Warning	:	BOOL;
	b_Error		:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>